--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 	"author": "",
 	"license": "MIT",
 	"peerDependencies": {
-		"react": "^16.0.0 || ^18.0.0",
-		"react-dom": "^16.0.0 || ^18.0.0"
+		"react": "^16.0.0 || ^18.0.0 || ^19.0.0",
+		"react-dom": "^16.0.0 || ^18.0.0 || ^19.0.0"
 	},
 	"dependencies": {
 		"@ant-design/icons": "^5.0.0",
@@ -36,6 +36,7 @@
 		"@rollup/plugin-babel": "^6.0.0",
 		"@rollup/plugin-commonjs": "^25.0.0",
 		"@rollup/plugin-node-resolve": "^15.0.0",
+		"@rollup/plugin-terser": "^0.4.4",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
@@ -47,7 +48,6 @@
 		"rollup": "^2.79.1",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-postcss": "^4.0.0",
-		"rollup-plugin-terser": "^7.0.2",
 		"sass": "^1.62.0",
 		"vite": "^6.2.6"
 	}
